--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,20 @@
 version: "3"
 services:
-  app:
-    image: node:18-slim
+  app-nfs:
+    build:
+      context: .
     working_dir: /usr/src/app
     volumes:
       - nfsmount:/usr/src/app:cached
+
+  app-nodemodules-local:
+    build:
+      context: .
+    working_dir: /usr/src/app
+    volumes:
+      - .:/usr/src/app
+      - nodemodules:/usr/src/app/node_modules
+    command: /bin/sh -c "while sleep 1000; do :; done"
 
 # https://www.jeffgeerling.com/blog/2020/revisiting-docker-macs-performance-nfs-volumes
 # https://cabra.dev/en/2020/04/30/slow-docker-on-mac-use-nfs/
@@ -15,3 +25,4 @@ volumes:
       type: nfs
       o: addr=host.docker.internal,rw,nolock,hard,nointr,nfsvers=3
       device: ":${PWD}"
+  nodemodules:
