--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,5 +40,5 @@ volumes:
     driver_opts:
       type: nfs
       o: addr=host.docker.internal,rw,nolock,hard,nointr,nfsvers=3
-      device: ":${PWD}"
+      device: ":${PWD}/create-react-app"
   nodemodules:
